# firmware-lifter

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  justfile  pyproject.toml
examples/: .firmware-lifter-profiles.yaml  README.md
examples/custom/: .firmware-lifter-transport.yaml
examples/gdb/: .firmware-lifter-transport.yaml
examples/openocd/: .firmware-lifter-transport.yaml
examples/stm32flash/: .firmware-lifter-transport.yaml
firmware_lifter/: cli.py  config.py  transports.py
tests/: test_cli.py  test_config.py  test_transports.py
