[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firmware_lifter"
version = "0.0.1"
description = "Semi-automated firmware transfer to a target device"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
classifiers = [
  "Programming Language :: Python",
]
dependencies = [
  "ruamel.yaml>=0.18",
  "pydantic>=2,<3",
]

[project.scripts]
firmware-lifter = "firmware_lifter.cli:main"

[tool.hatch.envs.default.scripts]
version = "bump-my-version bump {args}"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
]

[tool.hatch.envs.test.scripts]
test = "pytest {args:tests}"

[tool.hatch.envs.style]
extra-dependencies = [
  "mypy",
]

[tool.hatch.envs.style.scripts]
typing = [
  "mypy --install-types --non-interactive {args:firmware_lifter}"
]

[tool.hatch.envs.hatch-static-analysis]
# disable hatch's overrides for ruff
config-path = "none"

[tool.coverage.run]
source_pkgs = [
  "firmware_lifter",
]
branch = true
parallel = true

[tool.coverage.paths]
firmware_lifter = [
  "firmware_lifter",
]
tests = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
